# puce_rag_presentacion

./: .bash_profile  .gitignore  Makefile  README.md  lx_install_venv.sh  pyproject.toml  requirements.txt  run_st_app.bat  run_st_app_demo.bat  setup.cfg  ws_install_venv.bat
config/: __init__.py  settings.py
data/: deploy_ec.txt
puce_rag_presentacion/: 1_using_models.py  2_embeddings.py  __init__.py  app.py  helpers.py  slides.py
tools/: __init__.py  project_tree.py
